==> IOsonata/IOsonata/ARM/Nordic/src/i2c_nrfx.cpp <==
#include "nrf.h"
#include "nrf_peripherals.h"
#include "istddef.h"
#include "coredev/i2c.h"
#include "iopinctrl.h"
#include "idelay.h"
#include "coredev/shared_intrf.h"
#define NRFX_I2C_MAXDEV				TWIM_COUNT
#define NRFX_I2C_MAXDEV				TWI_COUNT
#define NRFX_I2CSLAVE_MAXDEV		TWIS_COUNT
#define NRFX_I2CSLAVE_MAXDEV		0
#define NRFX_I2C_DMA_MAXCNT			((1<<TWIS0_EASYDMA_MAXCNT_SIZE)-1)
#define NRFX_I2C_TRBUFF_SIZE	4

void nRFxI2CDisable(DevIntrf_t * const pDev)
{
	nRFTwiDev_t *dev = (nRFTwiDev_t*)pDev->pDevData;

#ifdef TWIM_PRESENT
	dev->pDmaReg->ENABLE = (TWIM_ENABLE_ENABLE_Disabled << TWIM_ENABLE_ENABLE_Pos);
#else
	dev->pReg->ENABLE = (TWI_ENABLE_ENABLE_Disabled << TWI_ENABLE_ENABLE_Pos);
#endif
}

void nRFxI2CEnable(DevIntrf_t * const pDev)
{
	nRFTwiDev_t *dev = (nRFTwiDev_t*)pDev->pDevData;

#ifdef TWIM_PRESENT
    if (dev->pI2cDev->DevIntrf.bDma)
    {
		if (dev->pI2cDev->Cfg.Mode == I2CMODE_SLAVE)
		{
			dev->pDmaReg->ENABLE = (TWIS_ENABLE_ENABLE_Enabled << TWIS_ENABLE_ENABLE_Pos);
		}
		else
		{
			dev->pDmaReg->ENABLE = (TWIM_ENABLE_ENABLE_Enabled << TWIM_ENABLE_ENABLE_Pos);
		}
    }
    else
#endif
	{
#ifdef TWI_PRESENT
    	dev->pReg->ENABLE = (TWI_ENABLE_ENABLE_Enabled << TWI_ENABLE_ENABLE_Pos);
#endif
    }
}

uint32_t nRFxI2CGetRate(DevIntrf_t * const pDev)
{
	nRFTwiDev_t *dev = (nRFTwiDev_t*)pDev->pDevData;

	return dev->pI2cDev->Cfg.Rate;
}

uint32_t nRFxI2CSetRate(DevIntrf_t * const pDev, uint32_t RateHz)
{
	nRFTwiDev_t *dev = (nRFTwiDev_t*)pDev->pDevData;
	uint32_t regval = 0;

	for (int i = 0; i < s_NbI2CFreq; i++)
	{
		if (s_nRFxI2CFreq[i].Freq <= RateHz)
		{
			regval =  s_nRFxI2CFreq[i].RegVal;
			dev->pI2cDev->Cfg.Rate = s_nRFxI2CFreq[i].Freq;
		}
	}

#ifdef TWIM_PRESENT
	dev->pDmaReg->FREQUENCY = regval;
#else
	dev->pReg->FREQUENCY = regval;
#endif

	return dev->pI2cDev->Cfg.Rate;
}

bool nRFxI2CStartRx(DevIntrf_t * const pDev, uint32_t DevAddr)
{
	nRFTwiDev_t *dev = (nRFTwiDev_t*)pDev->pDevData;

#ifdef TWI_PRESENT
	dev->pReg->ADDRESS = DevAddr;
	dev->pReg->INTENCLR = 0xFFFFFFFF;
#else
	dev->pDmaReg->ADDRESS = DevAddr;
	dev->pDmaReg->INTENCLR = 0xFFFFFFFF;
#endif

	return true;
}

int nRFxI2CRxData(DevIntrf_t *pDev, uint8_t *pBuff, int BuffLen)
{
	nRFTwiDev_t *dev = (nRFTwiDev_t*)pDev->pDevData;
	int cnt = 0;

	if (pBuff == NULL || BuffLen <= 0)
	{
		return 0;
	}

#ifdef TWI_PRESENT

	dev->pReg->EVENTS_STOPPED = 0;
	dev->pReg->TASKS_STARTRX = 1;

	while (BuffLen > 0)
	{
		if (nRFxI2CWaitRxComplete(dev, 100000) == false)
		{
			break;
		}

		*pBuff = dev->pReg->RXD;

		BuffLen--;
		pBuff++;
		cnt++;
	}
#endif

	return cnt;
}

void nRFxI2CStopRx(DevIntrf_t * const pDev)
{
    nRFTwiDev_t *dev = (nRFTwiDev_t*)pDev->pDevData;
#ifdef TWIM_PRESENT
	NRF_TWIM_Type *reg = dev->pDmaReg;
#else
	NRF_TWI_Type *reg = dev->pReg;
#endif

	reg->TASKS_RESUME = 1;
    reg->TASKS_STOP = 1;

    if (dev->pI2cDev->DevIntrf.bDma == false)
    {
        // must read dummy last byte to generate NACK & STOP condition
    	nRFxI2CWaitRxComplete(dev, 100000);
#ifdef TWI_PRESENT
    	(void)dev->pReg->RXD;
#endif
    }
    nRFxI2CWaitStop(dev, 1000);
}

bool nRFxI2CStartTx(DevIntrf_t * const pDev, uint32_t DevAddr)
{
	nRFTwiDev_t *dev = (nRFTwiDev_t*)pDev->pDevData;

#ifdef TWI_PRESENT
	dev->pReg->ADDRESS = DevAddr;
	dev->pReg->INTENCLR = 0xFFFFFFFF;
	NRF_TWI_Type *reg = dev->pReg;
#else
	dev->pDmaReg->ADDRESS = DevAddr;
	dev->pDmaReg->INTENCLR = 0xFFFFFFFF;
	NRF_TWIM_Type *reg = dev->pDmaReg;
#endif
    if (reg->EVENTS_ERROR)
    {
    	reg->ERRORSRC = reg->ERRORSRC;
    	reg->EVENTS_ERROR = 0;
    }
	return true;
}

int nRFxI2CTxData(DevIntrf_t * const pDev, uint8_t *pData, int DataLen)
{
	nRFTwiDev_t *dev = (nRFTwiDev_t*)pDev->pDevData;
	uint32_t d;
	int cnt = 0;

#ifdef TWI_PRESENT
	dev->pReg->TASKS_STARTTX = 1;

	while (DataLen > 0)
	{
		dev->pReg->TXD = *pData;

		if (nRFxI2CWaitTxComplete(dev, 10000) == false)
		{
			break;
		}

		DataLen--;
		pData++;
		cnt++;
	}
#endif
	return cnt;
}

void nRFxI2CStopTx(DevIntrf_t * const pDev)
{
    nRFTwiDev_t *dev = (nRFTwiDev_t*)pDev->pDevData;
#ifdef TWIM_PRESENT
	NRF_TWIM_Type *reg = dev->pDmaReg;

	if (dev->pI2cDev->DevIntrf.bDma)
    {
		if (reg->EVENTS_LASTTX == 1)
		{
			reg->EVENTS_LASTTX = 0;
		}
    }
#else
	NRF_TWI_Type *reg = dev->pReg;
#endif

	reg->EVENTS_SUSPENDED = 0;
	reg->TASKS_RESUME = 1;
    reg->TASKS_STOP = 1;

    nRFxI2CWaitStop(dev, 1000);
}

bool I2CInit(I2CDev_t * const pDev, const I2CCfg_t *pCfgData)
{
	if (pDev == NULL || pCfgData == NULL)
	{
		return false;
	}

    if (pCfgData->Mode == I2CMODE_SLAVE && pCfgData->DevNo >= NRFX_I2CSLAVE_MAXDEV)
    {
    	return false;
    }

    if (pCfgData->DevNo < 0 || pCfgData->DevNo >= NRFX_I2C_MAXDEV)
	{
		return false;
	}

	// Get the correct register map
#ifdef TWIM_PRESENT
	NRF_TWIM_Type *reg = s_nRFxI2CDev[pCfgData->DevNo].pDmaReg;
#else
	NRF_TWI_Type *reg = s_nRFxI2CDev[pCfgData->DevNo].pReg;
#endif

	// Force power on in case it was powered off previously
	*(volatile uint32_t *)((uint32_t)reg + 0xFFC);
	*(volatile uint32_t *)((uint32_t)reg + 0xFFC) = 1;

	memcpy(&pDev->Cfg, pCfgData, sizeof(I2CCfg_t));

	// Configure I/O pins
	IOPinCfg(pDev->Cfg.pIOPinMap, pDev->Cfg.NbIOPins);
    IOPinSet(pDev->Cfg.pIOPinMap[I2C_SDA_IOPIN_IDX].PortNo, pDev->Cfg.pIOPinMap[I2C_SDA_IOPIN_IDX].PinNo);
    IOPinSet(pDev->Cfg.pIOPinMap[I2C_SCL_IOPIN_IDX].PortNo, pDev->Cfg.pIOPinMap[I2C_SCL_IOPIN_IDX].PinNo);

#ifdef TWIM_PRESENT
    reg->PSEL.SCL = (pDev->Cfg.pIOPinMap[I2C_SCL_IOPIN_IDX].PinNo & 0x1f) | (pDev->Cfg.pIOPinMap[I2C_SCL_IOPIN_IDX].PortNo << 5);
    reg->PSEL.SDA = (pDev->Cfg.pIOPinMap[I2C_SDA_IOPIN_IDX].PinNo & 0x1f) | (pDev->Cfg.pIOPinMap[I2C_SDA_IOPIN_IDX].PortNo << 5);
#else
    reg->PSELSCL = (pDev->Cfg.pIOPinMap[I2C_SCL_IOPIN_IDX].PinNo & 0x1f);
    reg->PSELSDA = (pDev->Cfg.pIOPinMap[I2C_SDA_IOPIN_IDX].PinNo & 0x1f);
#endif

	s_nRFxI2CDev[pCfgData->DevNo].pI2cDev  = pDev;
	pDev->DevIntrf.pDevData = (void*)&s_nRFxI2CDev[pCfgData->DevNo];


	nRFxI2CSetRate(&pDev->DevIntrf, pCfgData->Rate);

	pDev->DevIntrf.EnCnt = 1;
	pDev->DevIntrf.Type = DEVINTRF_TYPE_I2C;
	pDev->DevIntrf.bDma = pCfgData->bDmaEn;
	pDev->DevIntrf.Disable = nRFxI2CDisable;
	pDev->DevIntrf.Enable = nRFxI2CEnable;
	pDev->DevIntrf.PowerOff = nRFxI2CPowerOff;
	pDev->DevIntrf.GetRate = nRFxI2CGetRate;
	pDev->DevIntrf.SetRate = nRFxI2CSetRate;
	pDev->DevIntrf.StartRx = nRFxI2CStartRx;
	pDev->DevIntrf.StopRx = nRFxI2CStopRx;
	pDev->DevIntrf.StartTx = nRFxI2CStartTx;

#ifndef TWI_PRESENT
	// Only DMA mode avail.  Force DMA
	pDev->DevIntrf.bDma = true;
#endif

	if (pDev->DevIntrf.bDma)
	{
		pDev->DevIntrf.RxData = nRFxI2CRxDataDMA;
		pDev->DevIntrf.TxData = nRFxI2CTxDataDMA;
	}
	else
	{
		pDev->DevIntrf.RxData = nRFxI2CRxData;
		pDev->DevIntrf.TxData = nRFxI2CTxData;
	}
	pDev->DevIntrf.StopTx = nRFxI2CStopTx;
	pDev->DevIntrf.Reset = nRFxI2CReset;
	pDev->DevIntrf.GetHandle = nRFxI2CGetHandle;
	pDev->DevIntrf.IntPrio = pCfgData->IntPrio;
	pDev->DevIntrf.EvtCB = pCfgData->EvtCB;
	pDev->DevIntrf.MaxRetry = pCfgData->MaxRetry;

	atomic_flag_clear(&pDev->DevIntrf.bBusy);

	reg->SHORTS = 0;

	// Clear all errors
    if (reg->EVENTS_ERROR)
    {
        reg->ERRORSRC = reg->ERRORSRC;
        reg->EVENTS_ERROR = 0;
        reg->TASKS_RESUME = 1;
        reg->TASKS_STOP = 1;
    }

    usDelay(1000);

#ifdef TWIM_PRESENT
    reg->EVENTS_LASTRX = 0;
    reg->EVENTS_LASTTX = 0;
    reg->EVENTS_RXSTARTED = 0;
    reg->EVENTS_TXSTARTED = 0;
#endif
    reg->EVENTS_SUSPENDED = 0;
    reg->EVENTS_STOPPED = 0;

    uint32_t enval = 0;
    uint32_t inten = 0;

#ifdef TWIS_PRESENT
    if (pCfgData->Mode == I2CMODE_SLAVE)
    {
    	NRF_TWIS_Type *sreg = s_nRFxI2CDev[pCfgData->DevNo].pDmaSReg;
        pDev->Cfg.NbSlaveAddr = min(pCfgData->NbSlaveAddr, NRFX_I2CSLAVE_MAXDEV);

        sreg->CONFIG = 0;
        sreg->ORC = 0xff;

        for (int i = 0; i < pDev->Cfg.NbSlaveAddr; i++)
        {
        	sreg->ADDRESS[i] = (uint32_t)pDev->Cfg.SlaveAddr[i];
        	if (pDev->Cfg.SlaveAddr[i] != 0)
        	{
        		sreg->CONFIG |= 1<<i;
        	}
        }

		sreg->SHORTS = TWIS_SHORTS_READ_SUSPEND_Msk | TWIS_SHORTS_WRITE_SUSPEND_Msk;
        sreg->EVENTS_READ = 0;
        sreg->EVENTS_WRITE = 0;
        sreg->EVENTS_ERROR = 0;
        sreg->EVENTS_RXSTARTED = 0;
        sreg->EVENTS_TXSTARTED = 0;
        sreg->EVENTS_STOPPED = 0;

        enval = TWIS_ENABLE_ENABLE_Enabled << TWIS_ENABLE_ENABLE_Pos;

        // NOTE: Do not enable RXSTARTED interrupt
        inten = (TWIS_INTEN_READ_Enabled << TWIS_INTEN_READ_Pos) |
        		(TWIS_INTEN_WRITE_Enabled << TWIS_INTEN_WRITE_Pos) |
//				(TWIS_INTEN_RXSTARTED_Enabled << TWIS_INTEN_RXSTARTED_Pos) |
//				(TWIS_INTEN_TXSTARTED_Enabled << TWIS_INTEN_TXSTARTED_Pos) |
				(TWIS_INTEN_ERROR_Enabled << TWIS_INTEN_ERROR_Pos) |
        		(TWIS_INTEN_STOPPED_Enabled << TWIS_INTEN_STOPPED_Pos);
	    sreg->ENABLE = enval;
    }
    else
#endif
    {
#ifdef TWIM_PRESENT

		if (pDev->DevIntrf.bDma)
		{
			enval = (TWIM_ENABLE_ENABLE_Enabled << TWIM_ENABLE_ENABLE_Pos);
		    reg->ENABLE = enval;
		}
		else
#endif
		{
#ifdef TWI_PRESENT
			enval = (TWI_ENABLE_ENABLE_Enabled << TWI_ENABLE_ENABLE_Pos);
			s_nRFxI2CDev[pCfgData->DevNo].pReg->EVENTS_RXDREADY = 0;
			s_nRFxI2CDev[pCfgData->DevNo].pReg->ENABLE = enval;
#endif
		}
    }
    if (inten != 0)
    {
    	SharedIntrfSetIrqHandler(pCfgData->DevNo, &pDev->DevIntrf, I2C_IRQHandler);

    	switch (pCfgData->DevNo)
    	{
#ifdef NRF91_SERIES
    		case 0:
                NVIC_ClearPendingIRQ(UARTE0_SPIM0_SPIS0_TWIM0_TWIS0_IRQn);
                NVIC_SetPriority(UARTE0_SPIM0_SPIS0_TWIM0_TWIS0_IRQn, pCfgData->IntPrio);
                NVIC_EnableIRQ(UARTE0_SPIM0_SPIS0_TWIM0_TWIS0_IRQn);
                break;
    	    case 1:
                NVIC_ClearPendingIRQ(UARTE1_SPIM1_SPIS1_TWIM1_TWIS1_IRQn);
                NVIC_SetPriority(UARTE1_SPIM1_SPIS1_TWIM1_TWIS1_IRQn, pCfgData->IntPrio);
                NVIC_EnableIRQ(UARTE1_SPIM1_SPIS1_TWIM1_TWIS1_IRQn);
                break;
    	    case 2:
                NVIC_ClearPendingIRQ(UARTE2_SPIM2_SPIS2_TWIM2_TWIS2_IRQn);
                NVIC_SetPriority(UARTE2_SPIM2_SPIS2_TWIM2_TWIS2_IRQn, pCfgData->IntPrio);
                NVIC_EnableIRQ(UARTE2_SPIM2_SPIS2_TWIM2_TWIS2_IRQn);
                break;
    	    case 3:
                NVIC_ClearPendingIRQ(UARTE3_SPIM3_SPIS3_TWIM3_TWIS3_IRQn);
                NVIC_SetPriority(UARTE3_SPIM3_SPIS3_TWIM3_TWIS3_IRQn, pCfgData->IntPrio);
                NVIC_EnableIRQ(UARTE3_SPIM3_SPIS3_TWIM3_TWIS3_IRQn);
                break;
#elif defined(NRF53_SERIES)
    		case 0:
                NVIC_ClearPendingIRQ(SPIM0_SPIS0_TWIM0_TWIS0_UARTE0_IRQn);
                NVIC_SetPriority(SPIM0_SPIS0_TWIM0_TWIS0_UARTE0_IRQn, pCfgData->IntPrio);
                NVIC_EnableIRQ(SPIM0_SPIS0_TWIM0_TWIS0_UARTE0_IRQn);
                break;
#ifdef NRF5340_XXAA_APPLICATION
    	    case 1:
                NVIC_ClearPendingIRQ(SPIM1_SPIS1_TWIM1_TWIS1_UARTE1_IRQn);
                NVIC_SetPriority(SPIM1_SPIS1_TWIM1_TWIS1_UARTE1_IRQn, pCfgData->IntPrio);
                NVIC_EnableIRQ(SPIM1_SPIS1_TWIM1_TWIS1_UARTE1_IRQn);
                break;
    	    case 2:
                NVIC_ClearPendingIRQ(SPIM2_SPIS2_TWIM2_TWIS2_UARTE2_IRQn);
                NVIC_SetPriority(SPIM2_SPIS2_TWIM2_TWIS2_UARTE2_IRQn, pCfgData->IntPrio);
                NVIC_EnableIRQ(SPIM2_SPIS2_TWIM2_TWIS2_UARTE2_IRQn);
                break;
    	    case 3:
                NVIC_ClearPendingIRQ(SPIM3_SPIS3_TWIM3_TWIS3_UARTE3_IRQn);
                NVIC_SetPriority(SPIM3_SPIS3_TWIM3_TWIS3_UARTE3_IRQn, pCfgData->IntPrio);
                NVIC_EnableIRQ(SPIM3_SPIS3_TWIM3_TWIS3_UARTE3_IRQn);
                break;
#endif
#elif defined(NRF52_SERIES)
    	    case 0:
				NVIC_ClearPendingIRQ(SPIM0_SPIS0_TWIM0_TWIS0_SPI0_TWI0_IRQn);
				NVIC_SetPriority(SPIM0_SPIS0_TWIM0_TWIS0_SPI0_TWI0_IRQn, pCfgData->IntPrio);
				NVIC_EnableIRQ(SPIM0_SPIS0_TWIM0_TWIS0_SPI0_TWI0_IRQn);
				break;
    	    case 1:
				NVIC_ClearPendingIRQ(SPIM1_SPIS1_TWIM1_TWIS1_SPI1_TWI1_IRQn);
				NVIC_SetPriority(SPIM1_SPIS1_TWIM1_TWIS1_SPI1_TWI1_IRQn, pCfgData->IntPrio);
				NVIC_EnableIRQ(SPIM1_SPIS1_TWIM1_TWIS1_SPI1_TWI1_IRQn);
				break;
#endif
    	}
    	reg->INTENSET = inten;
    }

//    reg->ENABLE = enval;

	return true;
}
